--- a/static/css/base.css
+++ b/static/css/base.css
@@ -393,7 +393,7 @@ input[id="id-save-info"] {
     width: 100%;
     max-width: 17.5rem !important;
     padding: 1rem;
-    margin-top: 3rem;
+    margin-top: 1rem;
     margin-bottom: 2rem;
     text-align: center;
 }
@@ -660,6 +660,35 @@ input[id="id-save-info"] {
 
 .review-section-container {
     max-width: 25rem !important;
+}
+
+.submit-review-container {
+    background-color: #551b8c;
+    color: white !important;
+    max-width: 25rem !important;
+}
+
+.submit-review-button {
+    text-align: center;
+    width: 5rem;
+    margin-left: .1rem;
+    height: 1.8rem;
+    background: #882bde;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+    border: 1px solid #882bde;
+    color: white;
+    text-decoration: none;
+    cursor: pointer; 
+}
+
+.submit-review-button:hover {
+    background: #c71585;
+    color: white;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------------------ Button Styling */
