--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -82,7 +82,7 @@
                     <p class="pl-2">
                         <span class="small">Left by <span
                                 class="bright-purple-text">{{ review.created_by_user }}</span>, on
-                            {{ review.created_date }}</span>
+                            {{ review.created_date|date:"Y-m-d" }}</span>
                     </p>
                 </div>
                 {% endif %}
@@ -98,7 +98,7 @@
                     {% csrf_token %}
 
                     <!-- Rating from 1 to 5, drop down menu -->
-                    <div>
+                    <div class="mt-3">
                         <label class="pr-5">
                             Select a rating (out of 5)
                         </label>
@@ -112,9 +112,9 @@
                     </div>
 
                     <!-- Review text content -->
-                    <div>
+                    <div class="mt-3">
                         <label>
-                            Your thoughts...
+                            Let us know your thoughts here...
                         </label>
                         <div class="bg-white border-purple border-radius-10 p-2 mb-2">
                             <textarea class="w-100 border-0 review-textarea purple-text" name="review_content"></textarea>
@@ -128,7 +128,7 @@
 
                 {% else %}
 
-                <div class="mt-4 w-100 purple-text border-purple border-radius-10 px-3 py-1 submit-review-container">
+                <div class="mt-4 w-100 purple-text border-purple border-radius-10 px-3 pb-2 pt-0 submit-review-container">
                     <p>
                         <a class="text-white" href="{% url 'account_login' %}"><strong>Login</strong></a> or <a class="text-white" href="{% url 'account_signup' %}"><strong>register</strong></a> to submit a review!
                     </p>
