--- a/static/css/base.css
+++ b/static/css/base.css
@@ -462,14 +462,6 @@ input[id="id-save-info"] {
     text-decoration: none;
 }
 
-.allauth-form-inner-content:hover {
-    background: #c71585;
-    color: white;
-    box-shadow: 0 0px 10px #ed82ed;
-    border: 1px solid #ed82ed
-}
-
-
 .super-user-options-container-main {
     border: 1px solid #551b8c;
     border-radius: 10px;
@@ -1366,7 +1358,6 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
     .allauth-form-inner-content {
         margin-top: 10rem !important;
-        border: 1px solid red;;
     }
 
     .main-logo-link {
@@ -1428,12 +1419,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     width: 100%;
 }
 
-.allauth-form-inner-content a {
-    margin-top: 1.5rem;
-    /* mt-4 */
-    color: #c71585 !important;
-    /* text-secondary */
-}
+
 
 .allauth-form-inner-content p {
     margin-top: 1.5rem;
@@ -1445,14 +1431,21 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 .allauth-form-inner-content input {
     border-color: #551b8c;
     border-radius: 10px;
+    color: #551b8c;
+}
+
+.allauth-form-inner-content .form-check-label {
+    color: #551b8c;
 }
 
 .allauth-form-inner-content label:not([for='id_remember']) {
     display: none;
+    
 }
 
 .allauth-form-inner-content input::placeholder {
-    color: #aab7c4;
+    color: #551b8c;
+    opacity: .6;
 }
 
 .allauth-form-inner-content button,
@@ -1467,7 +1460,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: #000;
+    background-color: red;
     border: 1px solid #000;
     padding: .375rem .75rem;
     font-size: 1rem;
@@ -1485,7 +1478,35 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     border-color: #222;
 }
 
-.allauth-form-inner-content a {
-    color: #17a2b8;
-    /* text-info */
+.sign-in-home-button {
+    color: white;
+    background-color: #551b8c;
+    border-radius: 10px;
+}
+
+.sign-in-home-button:hover {
+    background: #c71585;
+    color: white;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
+    text-decoration: none;
+}
+
+.primaryAction {
+    color: white;
+    background-color: #882bde !important;
+    border-radius: 10px !important;
+}
+
+.primaryAction:hover {
+    background: #c71585 !important;
+    color: white;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed !important;
+    text-decoration: none;
+}
+
+.secondaryAction {
+    margin-top: 3rem !important;
+    color: #551b8c;
 }
