--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -9,7 +9,7 @@
 <h2 class="purple-text mb-4">{% trans "Sign Up" %}</h2>
 
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a class="bright-purple-text" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
@@ -17,8 +17,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
+  <a class="btn sign-in-home-button" href="{% url 'account_login' %}">Back to Login</a>
+  <button class="primaryAction" type="submit">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
