Change color of rating drop down inputs in chocolate_detail.html

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -102,12 +102,12 @@
                         <label class="pr-5">
                             Select a rating (out of 5)
                         </label>
-                        <select name="choc_rating">
-                            <option class="purple-text px-2" value="1">1 </option>
-                            <option class="purple-text px-2" value="2">2</option>
-                            <option class="purple-text px-2" value="3" selected>3</option>
-                            <option class="purple-text px-2" value="4">4</option>
-                            <option class="purple-text px-2" value="5">5</option>
+                        <select class="rounded-lg bg-white bright-purple-text px-2 font-weight-bold" name="choc_rating">
+                            <option class="bright-purple-text px-2" value="1">1 </option>
+                            <option class="bright-purple-text px-2" value="2">2</option>
+                            <option class="bright-purple-text px-2" value="3" selected>3</option>
+                            <option class="bright-purple-text px-2" value="4">4</option>
+                            <option class="bright-purple-text px-2" value="5">5</option>
                         </select>
                     </div>
 
