Add floatformat:0 to rating in user review submitted section

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -75,7 +75,7 @@
 
                     <!-- Review rating -->
                     <p class="pl-2 mb-0 small">
-                        Rating: <strong>{{ review.choc_rating }} / 5</strong>
+                        <i class="fas fa-star mr-2 text-warning"></i><strong>{{ chocolate.get_choc_rating|floatformat:0 }}</strong> stars out of 5
                     </p>
 
                     <!-- Review user -->
