Fix html validation error in chocolate_detail.html

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -291,7 +291,7 @@
                     </p>
                     <div class="superuser-options">
                         <a class="delete-button-detail" href="{% url 'delete_chocolate' chocolate.id %}">Yes, delete</a>
-                        <p id="cancel-delete-button" class="edit-button-detail">No, cancel</a>
+                        <p id="cancel-delete-button" class="edit-button-detail">No, cancel</p>
 
                     </div>
                 </div>
