Change new-image attribute from id to class in edit_chocolate.html

--- a/chocolates/templates/chocolates/custom_widget_templates/custom_clearable_file_input.html
+++ b/chocolates/templates/chocolates/custom_widget_templates/custom_clearable_file_input.html
@@ -16,7 +16,7 @@
 <!-- Form input for chocolate image, from customer_clearable_file_input.html -->
 <span class="btn btn-black rounded-0 btn-file">
     <!-- Select Image button, from customer_clearable_file_input.html -->
-    Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"
+    Select Image <input class="new-image" type="{{ widget.type }}" name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
 </span>
 
