--- a/chocolates/templates/chocolates/edit_chocolate.html
+++ b/chocolates/templates/chocolates/edit_chocolate.html
@@ -56,8 +56,8 @@
 
     <!-- Script to handle the custom select image field -->
     <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
+        $('.new-image').change(function() {
+            var file = $('.new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
     </script>
