Fix html validation errors across site

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -48,7 +48,7 @@
             <!-- Responsive table -->
             <div class="order-history table-responsive table-borderless">
                 <table class="table table-sm">
-                    <thead">
+                    <thead>
                         <tr class="bright-purple-text">
                             <th>Order</th>
                             <th>Date</th>
