--- a/cart/templates/cart/checkout_buttons.html
+++ b/cart/templates/cart/checkout_buttons.html
@@ -10,7 +10,7 @@
         <span>Keep Shopping</span>
     </a>
     <a href="{% url 'checkout' %}" class="btn cart-checkout-button">
-        <span">Secure Checkout</span>
+        <span>Secure Checkout</span>
         <span class="icon">
             <i class="fas fa-lock"></i>
         </span>
