Add star icon to select a rating prompt in submit review section

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -99,8 +99,8 @@
 
                     <!-- Rating from 1 to 5, drop down menu -->
                     <div class="mt-3">
-                        <label class="pr-5">
-                            Select a rating (out of 5)
+                        <label class="pr-3">
+                            <i class="fas fa-star mr-2 text-warning"></i>Select a rating (out of 5)
                         </label>
                         <select class="rounded-lg bg-white bright-purple-text px-2 font-weight-bold" name="choc_rating">
                             <option class="bright-purple-text px-2" value="1">1 </option>
