Add basic footer structure to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -204,6 +204,52 @@
 
   {% endblock %}
 
+  <!-- Footer -->
+  <footer class="footer mt-5">
+    <div class="footer-content">
+
+      <div class="newsletter-signup">
+        <p>
+          Sign up to our newsletter!
+        </p>
+      </div>
+
+      <div>
+        <p>
+          Privacy policy
+        </p>
+      </div>
+
+      <div>
+        <p>
+          Privacy policy
+        </p>
+      </div>
+
+      <div></div>
+        <p>
+          <a class="text-white" href="https://wwww.facebook.com" rel="nofollow" target="_blank" aria-label="visit our facebook page">Facebook Page</a>
+        </p>
+      </div>
+
+
+      <!-- <p class="float-end">
+      </p>
+
+      <p>&copy; 2024 Chocelegance B.V. &middot; 
+        <a class="" href="">Privacy
+        </a> &middot; 
+        <a class="" href="">Terms
+        </a> Follow us on 
+        <a class="text-white" href="https://wwww.facebook.com" 
+        rel="nofollow"
+        target="_blank"
+        aria-label="go to three oaks facebook page (opens in new window)">Facebook</a>
+      </p> -->
+
+    </div>
+  </footer>
+
   <!-- Block for additional JS when required -->
   {% block postloadjs %}
   <script type="text/javascript">
