--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,7 +28,26 @@ body {
     width: fit-content;
 }
 
+.footer {
+    /* Background gradient effect generated from cssgradient.io */
+    background: rgb(85, 27, 140);
+    background: -moz-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    background: -webkit-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    background: linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c", endColorstr="#882bde", GradientType=1);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: white;
+    height: 4rem;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+}
 
+.footer-content {
+    width: 100%;
+    display: flex;
+    height: 4rem;
+}
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------ NAV ITEMS STYLING */
