Add gradient background to submit review container

--- a/templates/base.html
+++ b/templates/base.html
@@ -206,6 +206,19 @@
 
   <!-- Footer -->
   <footer class="footer mt-5">
+
+    <div class="footer-socials">
+
+      <a class="text-white" href="https://wwww.facebook.com" rel="nofollow" target="_blank" aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
+
+      <a class="text-white" href="https://www.instagram.com" rel="nofollow" target="_blank" aria-label="visit our Instagram page"><i class="fa-brands fa-instagram"></i></a>
+
+      <a class="text-white" href="https://www.x.com" rel="nofollow" target="_blank" aria-label="visit our X page"><i class="fa-brands fa-x-twitter"></i></a>
+
+      <a class="text-white" href="https://www.tiktok.com" rel="nofollow" target="_blank" aria-label="visit our Tiktok page"><i class="fa-brands fa-tiktok"></i></a>
+
+    </div>
+
     <div class="footer-content">
 
       <div class="newsletter-signup">
@@ -222,14 +235,10 @@
 
       <div>
         <p>
-          Privacy policy
+          Terms & Conditions
         </p>
       </div>
 
-      <div></div>
-        <p>
-          <a class="text-white" href="https://wwww.facebook.com" rel="nofollow" target="_blank" aria-label="visit our facebook page">Facebook Page</a>
-        </p>
       </div>
 
 
