--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,26 +28,7 @@ body {
     width: fit-content;
 }
 
-.footer {
-    /* Background gradient effect generated from cssgradient.io */
-    background: rgb(85, 27, 140);
-    background: -moz-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
-    background: -webkit-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
-    background: linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c", endColorstr="#882bde", GradientType=1);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    color: white;
-    height: 4rem;
-    padding-top: .3rem;
-    padding-bottom: .3rem;
-}
 
-.footer-content {
-    width: 100%;
-    display: flex;
-    height: 4rem;
-}
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------ NAV ITEMS STYLING */
@@ -175,7 +156,53 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 }
 
 
+/* ------------------------------------------------------------------------------------------------------------------------------ FOOTER STYLING */
 
+
+.footer {
+    /* Background gradient effect generated from cssgradient.io */
+    background: rgb(85, 27, 140);
+    background: -moz-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    background: -webkit-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    background: linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c", endColorstr="#882bde", GradientType=1);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: white;
+    height: 6rem;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+}
+
+.footer-content {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    height: 4rem;
+}
+
+.footer-content i {
+    font-size: 1.3rem;
+}
+
+.footer-socials {
+    padding-top: .6rem;
+    padding-bottom: .6rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 1.3rem;
+}
+
+.footer-socials i:hover {
+    border-radius: 50%;
+    background: #c71585;
+    color: white;
+    box-shadow: 0 0px 20px #ed82ed;
+    text-decoration: none;
+}
 
 
 
@@ -647,7 +674,12 @@ input[id="id-save-info"] {
 }
 
 .submit-review-container {
-    background-color: #551b8c;
+    /* Background gradient effect generated from cssgradient.io */
+    background: rgb(85, 27, 140);
+    background: -moz-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    background: -webkit-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    background: linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c", endColorstr="#882bde", GradientType=1);
     color: white !important;
     max-width: 25rem !important;
 }
@@ -657,10 +689,10 @@ input[id="id-save-info"] {
     width: 5rem;
     margin-left: .1rem;
     height: 1.8rem;
-    background: #882bde;
+    background: #551b8c;
     border-radius: 5px;
     transition: all 0.2s ease-in-out;
-    border: 1px solid #882bde;
+    border: 1px solid #ed82ed;
     color: white;
     text-decoration: none;
     cursor: pointer; 
