--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,13 @@
 /* ------------------------------------------------------------------------------------------------------------------------------ MAIN BODY SECTIONS STYLING */
 
 /* Link to google font used https://fonts.google.com/specimen/Urbanist */
+
+html {
+    height: 100%;
+}
+
 body {
+    height: 100%;
     font-family: "Urbanist", Arial, Helvetica, sans-serif;
     background: white;
     max-width: 98% !important;
@@ -160,6 +166,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
 
 .footer {
+    
     /* Background gradient effect generated from cssgradient.io */
     background: rgb(85, 27, 140);
     background: -moz-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
@@ -178,7 +185,6 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    height: 4rem;
 }
 
 .footer-content i {
@@ -1232,6 +1238,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 .allauth-form-inner-content {
     margin-top: 3rem;
     width: 100%;
+    height: 100vh;
 }
 
 
@@ -1324,6 +1331,12 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 .secondaryAction {
     margin-top: 3rem !important;
     color: #551b8c;
+}
+
+.allauth-form-inner-content .footer {
+    position: relative;
+    top: 0;
+
 }
 
 
