Add save override to chocolate model to fix rating sort bug

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -168,7 +168,7 @@
                 <br>
                 <small class="text-muted"><i class="fas fa-solid fa-circle-info purple-text pr-2"></i>{{ chocolate.choc_reviews.count }} Review(s) submitted</small>
                 {% else %}
-                <small class="text-muted"><i class="fas fa-solid fa-circle-info text-muted pr-2"></i>No rating yet!</small>
+                <small class="text-muted"><i class="fas fa-solid fa-circle-info text-muted pr-2"></i>No rating yet</small>
                 {% endif %}
 
                 <!-- Chocolate description -->
