--- a/static/css/base.css
+++ b/static/css/base.css
@@ -695,7 +695,7 @@ input[id="id-save-info"] {
     width: 5rem;
     margin-left: .1rem;
     height: 1.8rem;
-    background: #551b8c;
+    background: #c71585;
     border-radius: 5px;
     transition: all 0.2s ease-in-out;
     border: 1px solid #ed82ed;
