--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -168,11 +168,11 @@
                                     {% endif %}
 
                                     <!-- Displays the chocolate rating, from chocolates.html -->
-                                    {% if chocolate.choc_rating %}
+                                    {% if chocolate.choc_reviews.count > 0 %}
                                     <small class="text-muted"><i
                                             class="fas fa-star mr-1 text-warning"></i>{{ chocolate.get_choc_rating }} stars out of 5</small>
                                     {% else %}
-                                    <small class="text-muted mb-5">No Rating</small>
+                                    <small class="text-muted"><i class="fas fa-solid fa-circle-info text-muted pr-2"></i>No rating yet</small>
                                     {% endif %}
 
                                 </div>
